--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/challenge
-spring.jackson.default-property-inclusion=NON_NULL
+spring.data.mongodb.uri=mongodb://192.168.202.106:27017/challenge
